29-AGIC-Watch-Namespaces/01-app1-staging-kube-manifests/02-NginxApp1-ClusterIP-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-nginx-clusterip-service
  labels:
    app: app1-nginx
  namespace: staging    
spec:
  type: ClusterIP
  selector:
    app: app1-nginx
  ports:
    - port: 80
      targetPort: 80
